tests/NormalTests/paczka1/small_fuzzy/38192970.err
Error in line 10: CUk00gJ A699 97
Error in line 12: A699 A221 191,3
